Bug 530535 - Move away of deprecated Class.newInstance
Deprecated in Java 9 due to propagating exceptions instead of being
properly checked at compile time. The replacement
Constructor.newInstance has always been around.
Switched frameworkadmin bundles to use Eclipse default formatter as the
one defined prior to that was line breaking at 800.

Change-Id: Ia0cab2a80c288115c319ba3c1378d6b6fa20fbe7
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>